<resources>
    <string name="app_name">GDZS</string>
    <string name="next">Почати роботу</string>
    <string name="welcome">ПОСТ БЕЗПЕКИ</string>
    <string name="calculate">Калькулятор поста безпеки</string>
    <string name="calculate1">Розрахувати час та тиск </string>
    <string name="enter"> Далі</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="sername">Прізвище та ім`я</string>
    <string name="pressure">Тиск</string>
    <string name="zero">0</string>
    <string name="time_enter">Час входу ланки в задимлену зону:</string>
    <string name="time_expected">Очікуваний час виходу ланки:</string>
    <string name="time_actual">Фактичний час виходу ланки:</string>
    <string name="time">Обрати час</string>
    <string name="billing_data">Розрахункові дані</string>
    <string name="firePlace">Почати роботу в осередку пожежі</string>
    <string name="minPleasure">Найменший тиск в ланці: </string>
    <string name="timeFind">Час виявлення: </string>
    <string name="pressure_end">Розрахунок тиску </string>
    <string name="pressureExit">Тиск повернення :</string>
    <string name="pressureGo">Тиск використанний на шлях:</string>
    <string name="timeEnd">Розрахунок часу</string>
    <string name="timeExit">Час повернення</string>
    <string name="timeWork">Час роботи біля осередку пожежі</string>
    <string name="timeProtect">Час захисної дії апаратів</string>
    <string name="timer">Залишок</string>
    <string name="timer2">Таймер виходу</string>
    <string name="realTime">Годинник</string>
    <string name="fireTimer">Зв\'язок</string>
    <string name="accessToWork">Працювати при тиску нижче ліміту</string>
    <string name="warning">Попередження</string>
    <string name="warningMassage">Всі данні будуть видалені, ви впевненні?</string>
    <string name="startWork">Осередок пожежі знайдено!</string>
    <string name="work">Таймер роботи</string>
    <string name="notFindFirePart1">Таймер повернення</string>
    <string name="notFindFirePart2">якщо не знайдено осередку пожежі</string>
    <string name="startExit">Почати вихід ланки</string>
    <string name="log">Вихід: заповнити журнал</string>
    <!--Menu Drawer Strings -->
    <string name="ac_cat1">Акаунт</string>
    <string name="ac_sign_up">Реєстрація</string>
    <string name="sign_up">111</string>
    <string name="ac_sign_in">Вхід</string>
    <string name="ac_sign_out">Вихід</string>
    <string name="guidebook_cat2">Довідник</string>
    <string name="settings_cat3">Налаштування</string>
    <string name="about_cat4">Про додаток</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Увійдіть або зареєструйтесь!</string>
    <!--Sign dialog -->
    <string name="email_hint">Email</string>
    <string name="reset_email_was_sent">Відправлено листа на почту для відновлення пароля</string>
    <string name="dialog_reset_email_message"> Для відновлення паролю вкажіть вашу почтову скриньку</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зареєструватися</string>
    <string name="sign_in_action">Увійти</string>
    <string name="forget_password">Забули пароль?</string>
    <string name="google_email_not_found">Увійдіть в Google аккаунт в налаштуваннях телефону!</string>
    <string name="sign_up_error">Не вдалось зареєструватися!</string>
    <string name="sign_in_error">Не вдалось увійти!</string>
    <string name="sign_in_Google">Ви успішно увійшли!</string>
    <string name="send_verification_email_error">Не вдалось відправити email для підтвердження!</string>
    <string name="send_verification_done">На Вашу пошту відправлено посилання для підтвердження акаунту!</string>
    <!--Google and Mail-->
    <string name="link_done">Email успішно підключено до Google аккаунту</string>
    <string name="enter_to_g">У вас вже є аккаунт з цією Email адресою</string>
    <!--settings-->
    <string name="general">Основні налаштування</string>
    <string name="text_size">Оберіть розмір тексту</string>
    <string name="theme_settings">Оберіть колір теми</string>

    <!--List of menu-->
    <string-array name="action">
        <item>Оберіть тип роботи:</item>
        <item>Пожежа</item>
        <item>Аварія</item>
        <item>Заняття</item>
        <item>Навчання</item>
    </string-array>
    <string-array name="apparatus">
        <item>Оберіть тип апарату:</item>
        <item>Drager</item>
        <item>АСП-2</item>
        <item>MSA</item>
    </string-array>
    <string-array name="workload">
        <item>Оберіть тип навантаження:</item>
        <item>Середнє навантаження</item>
        <item>Тяжке навантаження</item>
    </string-array>

    <!--Error-->
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Ваш емейл вже зареєстровано!</string>
    <string name="ERROR_INVALID_EMAIL">Некоректно введений емейл!</string>
    <string name="ERROR_USER_NOT_FOUND">Даний користувач не зареєстрований</string>
    <string name="ERROR_WRONG_PASSWORD">Введено не вірний пароль</string>
    <string name="ERROR_WEAK_PASSWORD">У паролі повино бути мінімум 6 символів</string>

</resources>