<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="text_size_key"
            android:icon="@drawable/text_style"
            android:title="@string/text_size" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/chose_theme_array"
            android:entryValues="@array/chose_theme_value"
            android:key="theme_key"
            android:icon="@drawable/theme_style"
            android:title="@string/theme_settings" />
    </PreferenceCategory>
</PreferenceScreen>